--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button id="button1">CHECK</button>
 
             <p class="button2para">Want to check your Menu Items? </p>
-            <button id="button2">CHECK</button> 
+            <button id="button2">CHECK</button> <!-- Changed class to id for button2 -->
         </div>
     </div>
 
